[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-scamp"
version = "0.1.0"
description = "Human-friendly wrapper for SCAMP: note names, dotted notes, additive durations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DreamFunction", email = "3931718896@qq.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
]
dependencies = [
    "scamp>=0.8.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://gitee.com/dream-function/easy-scamp"
Repository = "https://gitee.com/dream-function/easy-scamp.git"
Issues = "https://gitee.com/dream-function/easy-scamp/issues"