[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notemidi"
version = "0.1.0"
description = "A lightweight tool library for converting human-friendly music notation to MIDI data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DreamFunction", email = "3931718896@qq.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/dreamfunction/notemidi"
Repository = "https://github.com/dreamfunction/notemidi.git"
Issues = "https://github.com/dreamfunction/notemidi/issues"